<resources>
    <string name="app_name">Sudoku</string>

    <string name="test_solution">Test solution</string>
    <string name="save_game">Save game</string>
    <string name="clear_cell">Clear cell</string>

    <string name="set1">1</string>
    <string name="set2">2</string>
    <string name="set3">3</string>
    <string name="set4">4</string>
    <string name="set5">5</string>
    <string name="set6">6</string>
    <string name="set7">7</string>
    <string name="set8">8</string>
    <string name="set9">9</string>

    <string name="continue_game">Continue game</string>
    <string name="new_game">Start new game</string>
    <string name="todo">TODO</string>
    <string name="title_activity_game2">Sudoku</string>
    <string name="preference_file_key">com.pinguinson.sudoku.PREFERENCE_FILE_KEY</string>
</resources>
