<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <com.pinguinson.sudoku.view.SudokuGridView
        android:id="@+id/sudokuGrid"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numColumns="9"
        android:layout_alignParentTop="true"/>

    <GridLayout
        android:id="@+id/buttonsGridSmall"
        android:orientation="horizontal"
        android:columnCount="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            style="@style/ButtonGridSmallStyle"
            android:id="@+id/setAvailable1"
            android:text="@string/set1" />
        <Button
            style="@style/ButtonGridSmallStyle"
            android:id="@+id/setAvailable2"
            android:text="@string/set2" />
        <Button
            style="@style/ButtonGridSmallStyle"
            android:id="@+id/setAvailable3"
            android:text="@string/set3" />
        <Button
            style="@style/ButtonGridSmallStyle"
            android:id="@+id/setAvailable4"
            android:text="@string/set4" />
        <Button
            style="@style/ButtonGridSmallStyle"
            android:id="@+id/setAvailable5"
            android:text="@string/set5" />
        <Button
            style="@style/ButtonGridSmallStyle"
            android:id="@+id/setAvailable6"
            android:text="@string/set6" />
        <Button
            style="@style/ButtonGridSmallStyle"
            android:id="@+id/setAvailable7"
            android:text="@string/set7" />
        <Button
            style="@style/ButtonGridSmallStyle"
            android:id="@+id/setAvailable8"
            android:text="@string/set8" />
        <Button
            style="@style/ButtonGridSmallStyle"
            android:id="@+id/setAvailable9"
            android:text="@string/set9" />

    </GridLayout>

    <GridLayout
        android:id="@+id/buttonsGridMain"
        android:orientation="horizontal"
        android:columnCount="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            style="@style/ButtonGridMainStyle"
            android:id="@+id/setCellValue1"
            android:text="@string/set1" />
        <Button
            style="@style/ButtonGridMainStyle"
            android:id="@+id/setCellValue2"
            android:text="@string/set2" />
        <Button
            style="@style/ButtonGridMainStyle"
            android:id="@+id/setCellValue3"
            android:text="@string/set3" />
        <Button
            style="@style/ButtonGridMainStyle"
            android:id="@+id/setCellValue4"
            android:text="@string/set4" />
        <Button
            style="@style/ButtonGridMainStyle"
            android:id="@+id/setCellValue5"
            android:text="@string/set5" />
        <Button
            style="@style/ButtonGridMainStyle"
            android:id="@+id/setCellValue6"
            android:text="@string/set6" />
        <Button
            style="@style/ButtonGridMainStyle"
            android:id="@+id/setCellValue7"
            android:text="@string/set7" />
        <Button
            style="@style/ButtonGridMainStyle"
            android:id="@+id/setCellValue8"
            android:text="@string/set8" />
        <Button
            style="@style/ButtonGridMainStyle"
            android:id="@+id/setCellValue9"
            android:text="@string/set9" />

    </GridLayout>

    <!--<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/actionButtonsPanel"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            style="@style/ButtonActionStyle"
            android:id="@+id/clearCellButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_cell" />

        <Button
            style="@style/ButtonActionStyle"
            android:id="@+id/testSolutionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_solution" />
        <Button
            style="@style/ButtonActionStyle"
            android:id="@+id/saveGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_game"
            android:onClick="saveGame" />
    </LinearLayout>-->

</RelativeLayout>
