<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pinguinson.sudoku.MainMenuActivity">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/mainMenuTitle"
            android:text="@string/app_name"
            android:textSize="@dimen/mainMenuTitle"
            android:textColor="@color/main_menu_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="80dp" />

        <Button
            style="@style/MainMenuButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_game"
            android:id="@+id/buttonContinueGame"
            android:layout_gravity="center_horizontal"
            android:onClick="continueGame"/>

        <Button
            style="@style/MainMenuButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/new_game"
            android:id="@+id/buttonNewGame"
            android:layout_gravity="center_horizontal"
            android:onClick="startNewGame"/>
    </LinearLayout>


</RelativeLayout>
